--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 git.sh
-.gitignore
+/EngineType.class
+/NormalVehicle.class
+/SportsVehicle.class
+/Vehicle.class
+/Showroom.class
+/HeavyVehicle.class
